# RPROM

./: .gitignore  README.md
Firmware/: CMakeLists.txt  memmap_custom.ld  protocol.h  rprom.c
Hardware/KiCad/: RPROM.kicad_pcb  RPROM.kicad_pro  RPROM.kicad_sch  RPROM.kicad_sym  fp-lib-table  sym-lib-table
Hardware/KiCad/RPROM.pretty/: SW_SPST_TS-1088.kicad_mod
RecoverySwitcher/: build.sh  main.asm
Software/: build.sh  ks_switch.c  reboot.asm  rprom.c
fw/: CMakeLists.txt  memmap_custom.ld  rprom.c
